[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Zone.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/services/TreadmillService.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2392, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 2416 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2560, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 2608 )

[node name="Treadmill" type="Node2D"]
script = ExtResource( 2 )

[node name="ZONE_01" parent="." instance=ExtResource( 1 )]
position = Vector2( -1536, -1536 )

[node name="ZONE_02" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -1536 )

[node name="ZONE_03" parent="." instance=ExtResource( 1 )]
position = Vector2( 1536, -1536 )

[node name="ZONE_04" parent="." instance=ExtResource( 1 )]
position = Vector2( -1536, 0 )

[node name="ZONE_05" parent="." instance=ExtResource( 1 )]

[node name="ZONE_06" parent="." instance=ExtResource( 1 )]
position = Vector2( 1536, 0 )

[node name="ZONE_07" parent="." instance=ExtResource( 1 )]
position = Vector2( -1536, 1536 )

[node name="ZONE_08" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 1536 )

[node name="ZONE_09" parent="." instance=ExtResource( 1 )]
position = Vector2( 1536, 1536 )

[node name="ZoneTrigger_N" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneTrigger_N"]
position = Vector2( 736, -1256 )
shape = SubResource( 1 )

[node name="ZoneTrigger_E" type="Area2D" parent="."]
position = Vector2( 392, 376 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneTrigger_E"]
position = Vector2( 2384, 440 )
shape = SubResource( 2 )

[node name="ZoneTrigger_S" type="Area2D" parent="."]
position = Vector2( 392, 376 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneTrigger_S"]
position = Vector2( 256, 2400 )
shape = SubResource( 3 )

[node name="ZoneTrigger_W" type="Area2D" parent="."]
position = Vector2( 392, 376 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneTrigger_W"]
position = Vector2( -1624, 592 )
shape = SubResource( 4 )

[connection signal="area_entered" from="ZoneTrigger_N" to="." method="_on_ZoneTrigger_N_area_entered"]
[connection signal="area_entered" from="ZoneTrigger_E" to="." method="_on_ZoneTrigger_E_area_entered"]
[connection signal="area_entered" from="ZoneTrigger_S" to="." method="_on_ZoneTrigger_S_area_entered"]
[connection signal="area_entered" from="ZoneTrigger_W" to="." method="_on_ZoneTrigger_W_area_entered"]
